OcctSharp/src/OcctSharp.Native/include/OcctSharp.Native.h

typedef enum OcctSharp_Status
{
  OCCTSHARP_STATUS_SUCCESS = 0,
  OCCTSHARP_STATUS_INVALID_ARGUMENT = 1,
  OCCTSHARP_STATUS_NULL_HANDLE = 2,
  OCCTSHARP_STATUS_OCCT_FAILURE = 3,
  OCCTSHARP_STATUS_STANDARD_EXCEPTION = 4,
  OCCTSHARP_STATUS_UNKNOWN_EXCEPTION = 5,
  OCCTSHARP_STATUS_FILE_IO_ERROR = 6,
  OCCTSHARP_STATUS_TRANSFER_FAILED = 7,
  OCCTSHARP_STATUS_INVALID_HANDLE = 8,
  OCCTSHARP_STATUS_TYPE_MISMATCH = 9
} OcctSharp_Status;
typedef struct OcctSharp_ShapeHandle OcctSharp_ShapeHandle;
typedef struct OcctSharp_TrsfHandle OcctSharp_TrsfHandle;
typedef struct OcctSharp_LocationHandle OcctSharp_LocationHandle;
typedef struct OcctSharp_VecHandle OcctSharp_VecHandle;
typedef struct OcctSharp_DirHandle OcctSharp_DirHandle;
OCCTSHARP_API uint32_t OCCTSHARP_CALL occtsharp_get_abi_version(void);
OCCTSHARP_API const char* OCCTSHARP_CALL occtsharp_get_bridge_version(void);
OCCTSHARP_API const char* OCCTSHARP_CALL occtsharp_get_occt_version(void);
OCCTSHARP_API const char* OCCTSHARP_CALL occtsharp_get_last_error(void);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_create_box(
  double size_x,
  double size_y,
  double size_z,
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_get_face_count(
  const OcctSharp_ShapeHandle* shape,
  int32_t* out_face_count);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_read_step(
  const char* file_path,
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_write_step(
  const OcctSharp_ShapeHandle* shape,
  const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_write_stl(
  const OcctSharp_ShapeHandle* shape,
  const char* file_path,
  double linear_deflection,
  double angular_deflection,
  int32_t binary);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_write_iges(
  const OcctSharp_ShapeHandle* shape,
  const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_transform(
  const OcctSharp_ShapeHandle* shape,
  double translation_x,
  double translation_y,
  double translation_z,
  double rotation_axis_x,
  double rotation_axis_y,
  double rotation_axis_z,
  double rotation_angle_radians,
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_create_identity(
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_create_translation_rotation(
  double translation_x,
  double translation_y,
  double translation_z,
  double rotation_axis_x,
  double rotation_axis_y,
  double rotation_axis_z,
  double rotation_angle_radians,
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_clone(
  const OcctSharp_TrsfHandle* source,
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_inverted(
  const OcctSharp_TrsfHandle* source,
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_multiplied(
  const OcctSharp_TrsfHandle* left,
  const OcctSharp_TrsfHandle* right,
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_trsf_value(
  const OcctSharp_TrsfHandle* transform,
  int32_t row,
  int32_t column,
  double* out_value);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_trsf_release(OcctSharp_TrsfHandle* transform);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_transform_trsf(
  const OcctSharp_ShapeHandle* shape,
  const OcctSharp_TrsfHandle* transform,
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_create_identity(
  OcctSharp_LocationHandle** out_location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_create_from_trsf(
  const OcctSharp_TrsfHandle* transform,
  OcctSharp_LocationHandle** out_location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_clone(
  const OcctSharp_LocationHandle* source,
  OcctSharp_LocationHandle** out_location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_inverted(
  const OcctSharp_LocationHandle* source,
  OcctSharp_LocationHandle** out_location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_multiplied(
  const OcctSharp_LocationHandle* left,
  const OcctSharp_LocationHandle* right,
  OcctSharp_LocationHandle** out_location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_is_identity(
  const OcctSharp_LocationHandle* location,
  int32_t* out_is_identity);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_location_to_trsf(
  const OcctSharp_LocationHandle* location,
  OcctSharp_TrsfHandle** out_transform);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_location_release(OcctSharp_LocationHandle* location);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_located(
  const OcctSharp_ShapeHandle* shape,
  const OcctSharp_LocationHandle* location,
  int32_t moved,
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_create(
  double x, double y, double z, OcctSharp_VecHandle** out_vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_clone(
  const OcctSharp_VecHandle* source, OcctSharp_VecHandle** out_vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_components(
  const OcctSharp_VecHandle* vector, double* x, double* y, double* z);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_magnitude(
  const OcctSharp_VecHandle* vector, double* magnitude);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_dot(
  const OcctSharp_VecHandle* left, const OcctSharp_VecHandle* right, double* dot);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_vec_crossed(
  const OcctSharp_VecHandle* left, const OcctSharp_VecHandle* right, OcctSharp_VecHandle** result);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_vec_release(OcctSharp_VecHandle* vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_dir_create(
  double x, double y, double z, OcctSharp_DirHandle** out_direction);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_dir_clone(
  const OcctSharp_DirHandle* source, OcctSharp_DirHandle** out_direction);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_dir_components(
  const OcctSharp_DirHandle* direction, double* x, double* y, double* z);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_dir_dot(
  const OcctSharp_DirHandle* left, const OcctSharp_DirHandle* right, double* dot);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_dir_reversed(
  const OcctSharp_DirHandle* source, OcctSharp_DirHandle** result);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_dir_release(OcctSharp_DirHandle* direction);