OcctSharp/src/OcctSharp/Interop/NativeMethods.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace OcctSharp.Interop;

internal static partial class NativeMethods
{
    private const string LibraryName = "OcctSharp.Native";

    static NativeMethods()
    {
        NativeLibraryResolver.EnsureRegistered();
    }

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_get_abi_version")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial uint GetAbiVersion();

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_get_bridge_version")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nint GetBridgeVersion();

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_get_occt_version")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nint GetOcctVersion();

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_get_last_error")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nint GetLastError();

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_create_box")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateBox(
        double sizeX,
        double sizeY,
        double sizeZ,
        out nint shape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_get_face_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetFaceCount(ShapeHandle shape, out int faceCount);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_shape_read_step",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus ReadStep(string filePath, out nint shape);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_shape_write_step",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus WriteStep(ShapeHandle shape, string filePath);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_shape_write_stl",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus WriteStl(
        ShapeHandle shape,
        string filePath,
        double linearDeflection,
        double angularDeflection,
        int binary);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_shape_write_iges",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus WriteIges(ShapeHandle shape, string filePath);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_transform")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus TransformShape(
        ShapeHandle shape,
        double translationX,
        double translationY,
        double translationZ,
        double rotationAxisX,
        double rotationAxisY,
        double rotationAxisZ,
        double rotationAngleRadians,
        out nint transformedShape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_create_identity")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateTransformIdentity(out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_create_translation_rotation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateTransform(
        double translationX,
        double translationY,
        double translationZ,
        double rotationAxisX,
        double rotationAxisY,
        double rotationAxisZ,
        double rotationAngleRadians,
        out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneTransform(TransformHandle source, out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_inverted")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus InvertTransform(TransformHandle source, out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_multiplied")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus MultiplyTransforms(
        TransformHandle left,
        TransformHandle right,
        out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetTransformValue(
        TransformHandle transform,
        int row,
        int column,
        out double value);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_trsf_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseTransform(nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_transform_trsf")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus TransformShapeWithTransform(
        ShapeHandle shape,
        TransformHandle transform,
        out nint transformedShape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_create_identity")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateLocationIdentity(out nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_create_from_trsf")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateLocation(TransformHandle transform, out nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneLocation(LocationHandle source, out nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_inverted")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus InvertLocation(LocationHandle source, out nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_multiplied")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus MultiplyLocations(
        LocationHandle left,
        LocationHandle right,
        out nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_is_identity")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus IsLocationIdentity(LocationHandle location, out int isIdentity);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_to_trsf")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus LocationToTransform(LocationHandle location, out nint transform);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_location_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseLocation(nint location);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_located")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus LocateShape(
        ShapeHandle shape,
        LocationHandle location,
        int moved,
        out nint locatedShape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateVector(double x, double y, double z, out nint vector);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneVector(VectorHandle source, out nint vector);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_components")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetVectorComponents(VectorHandle vector, out double x, out double y, out double z);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_magnitude")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetVectorMagnitude(VectorHandle vector, out double magnitude);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_dot")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetVectorDot(VectorHandle left, VectorHandle right, out double dot);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_crossed")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CrossVectors(VectorHandle left, VectorHandle right, out nint result);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_vec_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseVector(nint vector);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateDirection(double x, double y, double z, out nint direction);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneDirection(DirectionHandle source, out nint direction);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_components")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetDirectionComponents(DirectionHandle direction, out double x, out double y, out double z);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_dot")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetDirectionDot(DirectionHandle left, DirectionHandle right, out double dot);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_reversed")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus ReverseDirection(DirectionHandle source, out nint result);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_dir_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseDirection(nint direction);
